# silk-graph

./: .dockerignore  .gitignore  ANSWER_TO_REVIEW2.md  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Dockerfile.bench  EXPERIMENTS.md  FAQ.md  INVARIANTS.md  LICENSE-APACHE  LICENSE-MIT  LICENSE.md  Makefile  PROOF.md  PROTOCOL.md  QUERY_EXTENSIONS.md  README.md  REVIEW.md  REVIEW_2026Mar22.md  ROADMAP.md  SECURITY.md  WHY.md  pyproject.toml
.github/workflows/: bench.yml  ci.yml  release.yml
benches/: bench_entry.rs  bench_graph.rs  bench_oplog.rs  bench_sync.rs
docs/: PARTIAL_REPLICATION.md
examples/: compaction.py  concurrent_writes.py  offline_first.py  partial_views.py  partition_heal.py  query_builder.py  ring_topology.py  signing.py  tail_subscription.py  time_travel.py
experiments/: adapters.py  bench_comparative.py  bench_requirements.txt  harness.py  test_compaction_correctness.py  test_compression.py  test_fault_injection.py  test_graph_comparison.py  test_memory_footprint.py  test_persistence_perf.py  test_sync_overlap.py  test_tail_bench.py  test_tail_breakdown.py  test_tail_dig.py  test_tail_overhead.py
formal/: .gitignore  OpLog.cfg  OpLog.tla  README.md  SilkSync.cfg  SilkSync.tla  audit.json
pytests/: test_buffer.py  test_claim_audit.py  test_compaction.py  test_compaction_policy.py  test_constraints.py  test_edge_index_consistency.py  test_edge_index_tcp_sync.py  test_entries_affecting.py  test_extend_ontology.py  test_gossip.py  test_graph_engine.py  test_hierarchy.py  test_invariants.py  test_ontology_compat.py  test_open_properties.py  test_partial_sync.py  test_persistence.py  test_persistent_merge.py  test_quarantine.py  test_query_builder.py  test_security.py  test_signing.py  test_store_basic.py  test_subscription.py  test_subtypes.py  test_sync.py  test_tail.py  test_time_travel.py
python/silk/: __init__.py  __init__.pyi  compaction.py  compression.py  notify.py  query.py  views.py
scripts/: audit_claims.py
src/: bloom.rs  buffer.rs  clock.rs  engine.rs  entry.rs  gossip.rs  graph.rs  lib.rs  obslog.rs  ontology.rs  oplog.rs  provenance.rs  python.rs  store.rs  sync.rs
src/python/: conversions.rs  mod.rs  obslog.rs  snapshot.rs  tail.rs
tests/: integration_sync.rs  stress_sync.rs
