[package]
name = "silk-graph"
version = "0.1.7"
edition = "2021"
description = "Merkle-CRDT graph engine for distributed, conflict-free knowledge graphs"
authors = ["Kieleth <kieleth@gmail.com>"]
license-file = "LICENSE.md"
readme = "README.md"
repository = "https://github.com/Kieleth/silk-graph"
homepage = "https://kieleth.com"
keywords = ["crdt", "merkle", "graph", "distributed", "knowledge-graph"]
categories = ["database", "data-structures", "network-programming"]
rust-version = "1.75"

[lib]
name = "silk"
crate-type = ["cdylib", "rlib"]

[dependencies]
blake3 = "1"
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
regex = "1"
redb = "2"
pyo3 = { version = ">=0.23.4, <0.24", features = ["extension-module"], optional = true }
ed25519-dalek = { version = "2.1", features = ["rand_core"], optional = true }
rand = { version = "0.8", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"

[features]
default = []
python = ["dep:pyo3", "signing"]
signing = ["dep:ed25519-dalek", "dep:rand"]

[[bench]]
name = "bench_entry"
harness = false

[[bench]]
name = "bench_oplog"
harness = false

[[bench]]
name = "bench_sync"
harness = false

[[bench]]
name = "bench_graph"
harness = false
